--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ build-x86_64-linux/Main.o
 xmonad.errors
 build-x86_64-linux/Main.hi
 build-x86_64-linux/Main.o
+xmonad-x86_64-linux
+xmonad-x86_64-linux
+build-x86_64-linux/Main.o
